--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@
 @import "./layout/galeria";
 @import "./layout/agenda";
 @import "./layout/contacto";
+@import "./layout/media-1260w";
 @import "./layout/media-1140w";
 @import "./layout/_media-1035w";
 @import "./layout/media-tablet";
