--- a/scss/layout/_agenda.scss
+++ b/scss/layout/_agenda.scss
@@ -3,7 +3,8 @@
 .contenedor-agenda { /***  F L E X B O X  ***/
     @include flex (row,space-evenly);
     flex-wrap: wrap;
-    row-gap: 25px;
+    row-gap: 40px;
+    column-gap: 40px;
     margin-bottom: 25px;
     margin-top: 40px
 }
@@ -17,6 +18,7 @@
 
 .img__workshop {
     width: 300px;
+    height: 200px;
 }
 
 .contenedor-button { /***  F L E X B O X  ***/
