--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -3,14 +3,14 @@
     background-color: $color-4;
 }
 .container-index { /***  G R I D S  ***/
-    @include grid (repeat(12,1fr), repeat(12,1fr));
+    @include grid (repeat(12,1fr), repeat(7,1fr));
 }
 
 .nav-hamburguesa-index {
     display: none;
 }
 
-/*REGLAS DEL NAV INDEX*/
+/*REGLAS DEL INDEX*/
 
 .nav-index { /***  F L E X B O X  ***/
     grid-column: 1/13;
@@ -21,6 +21,7 @@
     margin: 0px;
     background-color: #f2f4f3;
     opacity: 60%;
+    position: fixed;
     @include flex (row, space-evenly);  
     a {
         @include typos ($font-1, 3.0rem, $color-2);
@@ -33,30 +34,57 @@
 
 .adam {
     letter-spacing: 14px;
-    @include typos ($font-1, 10.2rem, $color-3);
+    @include typos ($font-1, 13.8rem, $color-1);
     /*border: 1px solid black; lo dejo para centrar el elemento con el cliente*/
     grid-column: 2/6;
-    grid-row: 6/8;
+    grid-row: 4/6;
     @include flex (row, flex-start);
-    align-items:flex-end ;
+    align-self: center ;
 }
 
 .feiguin {
     letter-spacing: 16px;
-    @include typos ($font-1, 6.2rem, $color-3);
+    @include typos ($font-1, 8.8rem, $color-1);
     /*border: 1px solid black; lo dejo para centrar el elemento con el cliente*/
+    align-self: center;
     grid-column: 2/6;
-    grid-row: 8/9;
+    grid-row: 5/7;
 }
     
 .banner-index {
     grid-column: 1/13;
-    grid-row: 1/13;
-    background-image: url(../assets/img/desktop/foto-index.jpg);
+    grid-row: 1/9;
+    background-image: url(../assets/img/desktop/index3.jpg);
     background-repeat: no-repeat;
     background-position: top center;
     background-position: cover;
     object-fit: fill;
+}
+
+.mask-index {
+    grid-column: 1/6;
+    grid-row: 1/9;
+    opacity: 0.6;
+}
+
+.redes-index-desktop {
+    grid-column: 10/13;
+    grid-row: 7/8;
+    @include flex (row, flex-end);
+    justify-content: space-evenly;
+    align-items: flex-start;
+    column-gap: 20px;
+    li {
+        list-style: none;
+    }
+}
+.derechos {
+    @include typos ($font-3, 1.7rem, $color-2);
+    grid-column: 9/13;
+    grid-row: 8/9;
+    justify-self: flex-end;
+    margin-right: 15px;
+    align-self: flex-start;
 }
     
 .link-2 {
