--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -123,8 +123,13 @@
         ;
     }
     .foto {
-        padding: 3px;
         width: 120px;
+        height: 80px;
+    } 
+
+    .foto-vert {
+        width: 120px;
+        height: 180px;
     } 
     .video__styling {    
         width:380px; 
@@ -136,12 +141,18 @@
 
 
     /*REGLAS ESPECIALES AGENDA - MOBILE*/
+    .contenedor-agenda { /***  F L E X B O X  ***/
+        flex-wrap: wrap;
+        column-gap: 40px;
+    }
+    
     .card__workshop {
         width: 260px;
         font-size: 1.3rem;
     }
     .img__workshop {
         width: 250px;
+        height: 167px;
     }
     .link-agenda-bio {
         margin-left: 30px;
