--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -45,9 +45,19 @@
     padding: $padd;
     margin: $margin;
 }
+
+@mixin aspect-ratio($width, $height) {
+    position: relative;
+      
+    &:before {
+      display: block;
+      content: "";
+      width: 100%;
+      padding-top: ($height / $width) * 100%;
+    }
 /*los mixins se agregan con @include nombre-mixin;*/
 /*@extend .clase  = copia las propiedades q se repiten de otra clase!*/
 
-
+}
 
 
