--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,8 @@
 @import "./layout/index";
 @import "./layout/sobre-mi";
 @import "./layout/galeria";
+@import "./layout/carousel";
+@import "./layout/modal";
 @import "./layout/agenda";
 @import "./layout/contacto";
 @import "./layout/media-1260w";
