--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -1,4 +1,46 @@
-.modal {
+
+.modal-container {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+.modal-container .modal-content  {
+    margin: auto;
+    padding: 25px;
+    width: 100%;
+    .close {
+        font-weight: bold;
+        text-decoration: none;
+        color: white;
+        background-color: #0b1f2a;
+        padding: 10px 30px;
+        border: 1px solid ;
+        border-radius: 6px;
+        float: right;
+        font-size: 26px;
+        font-weight: bolder;
+        transition: background-color .3s;
+    }
+    &:hover {
+        color: #0b1f2a;
+        background-color: white;
+    }
+    &:focus {
+        color: #0b1f2a;
+        background-color: white;
+    }
+}
+
+
+
+/*.modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -37,4 +79,4 @@
 .modal-show {
     opacity: 1;
     pointer-events: unset;
-}
+}*/
