--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -1,82 +1,53 @@
 
-.modal-container {
+#ButtonModal:hover {
+    cursor: pointer;
+    transition: transform 700ms 0s;
+    transform: scale(1.05);
+}
+
+.modalContainer {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2  ;
     padding-top: 100px;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-}
-
-.modal-container .modal-content  {
     margin: auto;
     padding: 25px;
-    width: 100%;
-    .close {
-        font-weight: bold;
-        text-decoration: none;
-        color: white;
-        background-color: #0b1f2a;
-        padding: 10px 30px;
-        border: 1px solid ;
-        border-radius: 6px;
-        float: right;
-        font-size: 26px;
-        font-weight: bolder;
-        transition: background-color .3s;
-    }
-    &:hover {
-        color: #0b1f2a;
-        background-color: white;
-    }
-    &:focus {
-        color: #0b1f2a;
-        background-color: white;
-    }
+    width: 100%;   
 }
 
-
-
-/*.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    left: 0;
-    background-color: #0b1f2a;
-    display: flex;
+.modalContent  {
     margin: auto;
+    padding: 25px;
+    width: 100%;   
+    display: flex;
     flex-direction: column;
-    gap: 20px;
-    opacity: 0;
-    pointer-events: none;
 }
 
-.modal-close {
+
+.close {
+    /*float: right;*/
+    align-self: flex-end;
     margin-bottom: 20px;
-    font-weight: bold;
+    font-size: 1.5rem;
     text-decoration: none;
     color: white;
-    background-color: #0b1f2a;
+    background-color: #153c50;
     padding: 10px 30px;
-    border: 1px solid ;
     border-radius: 6px;
     font-weight: 300;
     display: inline-block;
-    transition: background-color .3s;
+    transition: background-color .3s;   
+    &:hover {
+        cursor: pointer;
+        color: #153c50;
+        background-color: white;
+        border: 1px solid #bcbcbc;
+        transform: scale(1.03); 
+    }
+    
 }
-
-
-.modal-close:hover {
-    color: #0b1f2a;
-    background-color: white;
-}
-
-
-.modal-show {
-    opacity: 1;
-    pointer-events: unset;
-}*/
