--- a/css/style.css
+++ b/css/style.css
@@ -152,20 +152,90 @@ footer {
 .body-index {
   background-color: #f2f4f3; }
 
-.container-index {
-  /***  G R I D S  ***/
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(9, 1fr); }
-
 .nav-hamburguesa-index {
   display: none; }
 
 /*REGLAS DEL INDEX*/
+.body-index {
+  background-image: url(../assets/img/desktop/index-d.jpg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr) 100px;
+  grid-template-areas: "header-index" "main-index" "footer-index-d"; }
+
+.header-index {
+  grid-area: "header-index"; }
+
+.main-index {
+  grid-area: "main-index";
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr); }
+
+.h1-index {
+  grid-row: 6/11;
+  grid-column: 3/4;
+  background: rgba(11, 31, 42, 0.7);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(2.5px);
+  border-radius: 10px;
+  width: 500px;
+  padding-left: 15px;
+  line-height: 80px;
+  letter-spacing: 14px;
+  font-family: "Rubik Dirt", cursive;
+  font-size: 13.8rem;
+  color: #5b6972; }
+
+.feiguin {
+  letter-spacing: 16px;
+  font-family: "Rubik Dirt", cursive;
+  font-size: 8.8rem;
+  color: #5b6972; }
+
+.footer-index-d {
+  grid-area: "footer-index-d";
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  justify-content: flex-end;
+  align-items: flex-end;
+  column-gap: 20px;
+  margin-right: 20px; }
+  .footer-index-d li {
+    list-style: none; }
+
+.footer-index-s {
+  display: none;
+  background-color: #f2f4f3;
+  text-align: center;
+  padding: 5px;
+  padding-top: 20px; }
+  .footer-index-s p {
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 1.7rem;
+    color: #153c50; }
+  .footer-index-s ul {
+    /***  F L E X B O X  ***/
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 20px;
+    text-align: center;
+    size: adjust 100px;
+    list-style: none;
+    margin-bottom: 10px; }
+    .footer-index-s ul a {
+      text-decoration: none; }
+
 .nav-index {
   /***  F L E X B O X  ***/
-  grid-column: 1/13;
-  grid-row: 1/2;
   width: 100%;
   padding: 5px;
   padding-top: 7px;
@@ -184,61 +254,6 @@ footer {
     text-decoration: none;
     animation-name: zoomInIndex;
     animation-duration: 3s; }
-
-.nombre {
-  grid-column: 2/6;
-  grid-row: 5/7;
-  /* From https://css.glass */
-  background: rgba(11, 31, 42, 0.45);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(11.6px);
-  -webkit-backdrop-filter: blur(11.6px);
-  padding-left: 15px;
-  line-height: 45px; }
-
-.adam {
-  letter-spacing: 14px;
-  font-family: "Rubik Dirt", cursive;
-  font-size: 13.8rem;
-  color: #5b6972; }
-
-.feiguin {
-  letter-spacing: 16px;
-  font-family: "Rubik Dirt", cursive;
-  font-size: 8.8rem;
-  color: #5b6972; }
-
-.banner-index {
-  grid-column: 1/13;
-  grid-row: 1/10;
-  background-image: url(../assets/img/desktop/index3.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-position: cover;
-  object-fit: fill; }
-
-.redes-index-desktop {
-  grid-column: 10/13;
-  grid-row: 8/9;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  column-gap: 20px; }
-  .redes-index-desktop li {
-    list-style: none; }
-
-.derechos {
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 1.7rem;
-  color: #153c50;
-  grid-column: 9/13;
-  grid-row: 9/10;
-  justify-self: flex-end;
-  margin-right: 15px;
-  align-self: flex-start; }
 
 .link-2 {
   animation-delay: 1000ms;
@@ -920,8 +935,18 @@ textarea {
 /*fin reglas especiales contacto*/
 @media (max-width: 1260px) {
   /*REGLAS ESPECIALES INDEX */
+  .body-index {
+    background-image: url(../assets/img/desktop/index-2.jpg); }
+  .h1-index {
+    grid-row: 6/11;
+    grid-column: 1/3;
+    width: 350px;
+    line-height: 60px;
+    letter-spacing: 12px;
+    font-size: 9.0rem; }
   .feiguin {
-    /*grid-column: 1/4;*/ }
+    letter-spacing: 14px;
+    font-size: 5.4rem; }
   /*REGLAS ESPECIALES GALERIA - TABLET*/
   .container-fotos {
     /***  G R I D S  ***/
@@ -937,38 +962,23 @@ textarea {
     width: 170px;
     height: 255px; }
   .container-videos {
-    /***  F L E X B O X  ***/
     display: flex;
     flex-direction: column;
     justify-content: center;
-    display: flex;
-    justify-items: center;
     align-items: center; }
   .video__styling {
     width: 500px; }
   /*Fin reglas especiales galeria TABLET*/ }
 
-@media (max-width: 1140px) {
-  .adam {
-    letter-spacing: 1.5rem;
-    font-size: 9.0rem;
-    color: #153c50; }
+@media (max-width: 1100px) {
+  .h1-index {
+    width: 300px;
+    line-height: 50px;
+    letter-spacing: 12px;
+    font-size: 8.0rem; }
   .feiguin {
-    letter-spacing: 1.0rem;
-    font-size: 6.0rem;
-    color: #153c50; }
-  .footer-index {
-    display: block; }
-  .banner-index {
-    background-image: url(../assets/img/desktop/foto-index.jpg); } }
-
-@media (max-width: 1035px) {
-  .adam {
-    letter-spacing: 1.5rem;
-    font-size: 6.0rem; }
-  .feiguin {
-    letter-spacing: 1.0rem;
-    font-size: 4.0rem; } }
+    letter-spacing: 15px;
+    font-size: 4.4rem; } }
 
 @media (max-width: 768px) {
   /***  RESPONSIVE A TABLET  ***/
@@ -980,12 +990,10 @@ textarea {
   /*REGLAS DEL NAV, BARRA DE NAVEGACION - TABLET*/
   .nav-index {
     /***  F L E X B O X  ***/
-    grid-column: 10/13;
-    grid-row: 1/13;
-    width: 100%;
+    width: 33%;
+    height: 100vh;
     padding: 5px;
     padding-top: 7px;
-    margin: 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly; }
@@ -997,26 +1005,40 @@ textarea {
     --bs-dropdown-font-size: 1.5rem; }
   /*fin reglas del nav TABLET*/
   /*REGLAS ESPECIALES INDEX - TABLET*/
-  .container-index {
-    /***  G R I D S  ***/
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    height: 470px;
-    /*align-items: center;*/ }
-  .banner-index {
-    background-image: url(../assets/img/tablet/foto-index-tablet.jpg); }
-  .adam {
-    letter-spacing: 1.5rem;
-    font-size: 4.2rem;
-    /*color: $color-1;*/
-    /*grid-column: 8/13;
-        grid-row: 11/13;*/
-    grid-column: 2/6;
-    grid-row: 11/13;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  .body-index {
+    background-image: url(../assets/img/desktop/foto-index.jpg);
+    background-position: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(11, 1fr) 100px; }
+  .header-index {
+    grid-column: 3/4;
+    grid-row: 1/11; }
+  .main-index {
+    grid-row: 1/11;
+    grid-column: 1/2;
     align-items: center; }
+  .h1-index {
+    margin-left: 20px;
+    background: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 0px 0px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    border-radius: 10px;
+    width: 250px;
+    padding-left: 15px;
+    line-height: 80px;
+    letter-spacing: 14px;
+    font-family: "Rubik Dirt", cursive;
+    font-size: 6.8rem;
+    color: #0b1f2a; }
+  .main-index {
+    grid-area: "main-index";
+    display: flex; }
+  .footer-index-d {
+    grid-column: 1/2;
+    grid-row: 12/13;
+    align-items: flex-start; }
   .feiguin {
     display: none; }
   /*fin reglas especiales index - TABLET */
@@ -1063,12 +1085,18 @@ textarea {
     width: 80vw; }
   /*Fin reglas especiales contacto TABLET*/ }
 
+@media (max-width: 635px) {
+  .h1-index {
+    font-size: 5.0rem; }
+  .footer-index-d {
+    display: none; }
+  .footer-index-s {
+    display: block; } }
+
 @media (max-width: 576px) {
   /***  RESPONSIVE A MOBILE  ***/
   /*REGLAS DEL NAV, BARRA DE NAVEGACION - MOBILE*/
   .nav-index {
-    /*grid-column: 5/9;
-        justify-content: flex-start;*/
     display: none; }
   .nav-hamburguesa-index {
     display: block;
@@ -1108,14 +1136,17 @@ textarea {
       margin-bottom: 10px; }
   /*fin reglas especiales footer MOBILE*/
   /*REGLAS ESPECIALES INDEX - MOBILE*/
-  .banner-index {
-    background-image: url(../assets/img/mobile/foto-index-mobile.jpg);
-    object-fit: fill; }
-  .container-index {
-    /***  G R I D S  ***/
-    height: 100vh;
-    width: 100%; }
-  .adam {
+  .body-index {
+    background-image: url(../assets/img/desktop/foto-index.jpg);
+    background-position: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr) 100px; }
+  .footer-index-d {
+    grid-row: 3/4; }
+  .header-index {
+    grid-column: 1/2; }
+  .h1-index {
     display: none; }
   .nav-index a {
     font-size: 1.0rem; }
